test/fixtures/public/fail/semantic/extra/thisNotInited.jmm
import static io.println(int) void;
class NotInited {

    public int add(int a, int b){
        int c;
        c = a;
        return c;
    }

    public static void main(String[] args){
        NotInited obj;
        obj.add(1,2); // MUST FAIL
    }

}